# frappe-notification-bridge

./: README.md  package.json  pyproject.toml
frappe_notification_bridge/: bridge.py  hooks.py  modules.txt
frappe_notification_bridge/notification_bridge/doctype/ms_teams_bridge_settings/: ms_teams_bridge_settings.json  ms_teams_bridge_settings.py
